# FL-Algorithmes

FL1/fedavg/: plot_results.py
FL1/fedavg/fedavg/: client_app.py  metrics_utils.py
FL1/fednova/fednova/: client_app.py  server_app.py
FL1/fedprox/fedprox/: client_app.py  server_app.py  task.py
FL1/fedsgd/fedsgd/: client_app.py
FL2/fedavg/: plot_results.py
FL2/fedavg/fedavg/: server_app.py
FL2/fedprox/: pyproject.toml
FL2/fedsgd/fedsgd/: server_app.py
FL3/fedavg/: pyproject.toml
FL3/fedavg/fedavg/: server_app.py
FL3/fednova/: pyproject.toml
FL3/fedprox/fedprox/: metrics_utils.py  server_app.py
FL3/fedsgd/: pyproject.toml
FL3/fedsgd/fedsgd/: server_app.py
