[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedavg"
version = "1.0.0"
description = "FedAvg avec partitionnement IID ou non-IID (Dirichlet) configurable au runtime"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "numpy>=1.26.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fedavg"]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "fedavg.server_app:app"
clientapp = "fedavg.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-evaluate = 1.0
local-epochs = 2
learning-rate = 0.01
batch-size = 32
num-clients = 10
# Partitionnement des donnees entre clients : "iid" ou "noniid" (Dirichlet).
partitioning = "noniid"
# Severite du non-IID (plus petit = plus skew). Ignore si partitioning="iid".
# 0.01 = extreme, 0.1 = fort, 0.3 = modere (defaut), 1.0 = doux, 10 = quasi-IID.
dirichlet-alpha = 0.3
# Heterogeneite systeme (simulation edge IoT).
data-heterogeneity = 0        # 1 = tailles de train variables par client
epochs-heterogeneity = 0      # 1 = nb d'epochs locales variable par client
# Early stopping cote serveur.
early-stopping-patience = 0      # 0 = desactive, N>0 = stop si acc n'ameliore pas pendant N rounds
early-stopping-min-delta = 0.001 # amelioration minimale de l'acc pour reinitialiser la patience
# Simulation stragglers (reseau variable + dropouts aleatoires).
# 0 = desactive (baseline, pas de delai).
# 1 = active  : chaque client a un tier reseau (lora/lte/wifi), on simule le
#               temps de transfert via time.sleep, et un dropout aleatoire par round.
straggler-sim = 0
# Deadline par round (secondes). 0 = desactive. Si total (local+comm) depasse,
# le client est marque "dropped" (ses poids = poids globaux => contribution nulle).
round-deadline-s = 0.0


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-sim"

# [tool.flwr.federations.local-sim]
# options.num-supernodes = 10
