[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fednova"
version = "1.0.0"
description = "FedNova (rescaling cote client) avec partitionnement IID ou non-IID configurable"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "numpy>=1.26.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fednova"]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "fednova.server_app:app"
clientapp = "fednova.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-evaluate = 1.0
local-epochs = 2
learning-rate = 0.01
batch-size = 32
num-clients = 10
# Partitionnement des donnees entre clients : "iid" ou "noniid" (Dirichlet).
partitioning = "noniid"
# Severite du non-IID (plus petit = plus skew). Ignore si partitioning="iid".
# 0.01 = extreme, 0.1 = fort, 0.3 = modere (defaut), 1.0 = doux, 10 = quasi-IID.
dirichlet-alpha = 0.3
# Heterogeneite systeme (simulation edge IoT).
data-heterogeneity = 0        # 1 = tailles de train variables par client
epochs-heterogeneity = 0      # 1 = nb d'epochs locales variable par client
# Early stopping cote serveur.
early-stopping-patience = 0
early-stopping-min-delta = 0.001
# Simulation stragglers (reseau variable + dropouts aleatoires).
# 0 = desactive (baseline). 1 = active.
straggler-sim = 0
# Deadline par round en secondes. 0 = desactive.
round-deadline-s = 0.0

[tool.flwr.federations]
default = "local-sim"

[tool.flwr.federations.local-sim]
options.num-supernodes = 10
